--- a/styles/text.css
+++ b/styles/text.css
@@ -1,6 +1,6 @@
-.main_text {
+.main-text {
     margin: 30px;
-    text-align:center;
+    text-align: center;
     font-size: 40px;
     font: bold;
 }
